# byter

./: CMakeLists.txt
include/: Byter.h
src/: Byter.cpp
test/: ByterTest.cpp
